codegen/ui_tests/rhai_mod_bad_value.stderr
error: expecting string literal
  --> ui_tests/rhai_mod_bad_value.rs:11:19
   |
11 | #[rhai_mod(name = true)]
   |                   ^^^^
